fixed bug 6: view more button is visible when more data is unavailable

--- a/src/index.css
+++ b/src/index.css
@@ -161,6 +161,10 @@ hr.RampBreak--l {
   cursor: pointer;
 }
 
+.RampButton-hidden {
+  display: none;
+}
+
 .RampButton:hover {
   background-color: var(--color-lighter-shade);
 }
